overlays/prod/kiali-patch.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kiali
  namespace: istio-system
spec:
  hosts:
    - "*"
  http:
    - match:
        - port: 20001
      route:
        - destination:
            host: kiali.istio-system.svc.cluster.local
            port:
              number: 20001
  # Fix gRPC issues
  grpc:
    - match:
        - port: 20001
      route:
        - destination:
            host: kiali.istio-system.svc.cluster.local
            port:
              number: 20001
